--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="./main.js"></script>
     <title>Status Page</title>
   </head>
   <body>
@@ -43,9 +44,9 @@
         </div>
       </div>
     </div>
-    <script src="./main.js"></script>
+
     <script>
-      getAllReports();
+      genAllReports();
     </script>
   </body>
 </html>
