--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <script src="./main.js"></script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"
+    ></script>
+    <script
+      async
+      src="https://cdn.jsdelivr.net/npm/dompurify@2.3.5/dist/purify.min.js"
+    ></script>
     <title>Status Page</title>
   </head>
   <body>
@@ -15,6 +23,17 @@
         <span> System Status </span>
       </div>
       <div id="reports" class="reportContainer"></div>
+      <div id="incidents" class="incidentsContainer">
+        <div class="statusContainer">
+          <div class="statusHeader">
+            <h3 class="incidentReportHeader">Incident Reports</h3>
+          </div>
+          <h4>Active Reports</h4>
+          <div id="activeIncidentReports">None recorded</div>
+          <hr />
+          <div id="pastIncidentReports">None Recorded</div>
+        </div>
+      </div>
       <div id="tooltip" class="tooltip" style="opacity: 0">
         <div id="tooltipArrow" class="tooltipArrow"></div>
         <div id="tooltipDateTime" class="tooltipDateTime"></div>
@@ -49,5 +68,8 @@
 
   <script>
     genAllReports();
+    window.addEventListener("load", () => {
+      genIncidentReport();
+    });
   </script>
 </html>
