--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       async
       src="https://cdn.jsdelivr.net/npm/dompurify@2.3.5/dist/purify.min.js"
     ></script>
+    <script async src="https://arc.io/widget.min.js#MjzHyPzq"></script>
     <title>Status Page</title>
   </head>
   <body>
